<resources>
    <string name="app_name">MadLevel7Task2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home</string>
    <string name="quiz_fragment_label">Quiz</string>
    <string name="building_fragment_label">Building</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Home Fragment-->
    <string name="home_title">Welcome to the HvA Locations Quest</string>
    <string name="home_instructions">After pressing start you will start the quest. After each question, a picture of a HvA building is shown. Go to the building and start the next question. At the end, there will be a prize waiting for you!</string>
    <string name="start_quest">Start Quest</string>

    <!--Quiz Fragment-->
    <string name="confirm">Confirm</string>


</resources>