<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.example.madlevel7task2.ui.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_HomeFragment_to_QuizFragment"
            app:destination="@id/QuizFragment" />
    </fragment>
    <fragment
        android:id="@+id/QuizFragment"
        android:name="com.example.madlevel7task2.ui.QuizFragment"
        android:label="@string/quiz_fragment_label"
        tools:layout="@layout/fragment_quiz">

        <action
            android:id="@+id/action_QuizFragment_to_HomeFragment"
            app:destination="@id/HomeFragment" />
    </fragment>
    <fragment
        android:id="@+id/BuildingFragment"
        android:name="com.example.madlevel7task2.ui.BuildingFragment"
        android:label="@string/building_fragment_label"
        tools:layout="@layout/fragment_building">
    </fragment>
</navigation>